Revert "UX: Prevent categories from overflowing select-kit"
This reverts commit f1ac3cf88811151a4205a357a544d54ab9e2a85b.

--- a/app/assets/stylesheets/common/select-kit/category-row.scss
+++ b/app/assets/stylesheets/common/select-kit/category-row.scss
@@ -13,10 +13,6 @@
       margin: 0;
     }
     .category-status {
-      overflow: hidden;
-      .badge-wrapper {
-        overflow: hidden;
-      }
       .badge-wrapper.box {
         margin-bottom: 1px;
         margin-top: 1px;
