--- a/app/assets/stylesheets/common/select-kit/select-kit.scss
+++ b/app/assets/stylesheets/common/select-kit/select-kit.scss
@@ -19,7 +19,6 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      max-width: 100%;
     }
 
     .select-kit-collection {
